--- a/bikeable/src/App.css
+++ b/bikeable/src/App.css
@@ -27,6 +27,12 @@ body {
   background-color:#1a1a1a;
   width:100%;
 }
+.footer{
+  width:min(max(300px,80vw),800px);
+  align-self:center;
+  align-content:center;
+
+}
 
 h1,h2,h3,h4,h5,p{
   margin:0px;
@@ -41,6 +47,5 @@ h1,h2,h3,h4,h5,p{
 
   border: .5px solid #555555;
   border-radius: 4px;
-  
 
 }
