add leaflet map

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -57,7 +57,7 @@ h1,h2,h3,h4,h5,p{
 }
 
 .location-container{
-  padding:10px;
+  padding:0px 10px;
   margin:auto;
   width:min(max(300px,90vw),800px);
   align-self:center;
@@ -82,10 +82,43 @@ h1,h2,h3,h4,h5,p{
   text-align: right;
 
   margin-left: auto;
+  margin-top:4px;
   margin-right: 8px;
-  margin-bottom:4px;
+  margin-bottom:0px;
 
 
+}
+
+.map-toggle{
+  /* background-color: #222222;  */
+  border: none;
+  
+  padding: 00px 6px;
+  
+  color: #aaaaaa;
+  /* text-decoration: underline; */
+  font-weight: bold;
+  
+  cursor:pointer;
+  text-align: center;
+  float: right;
+
+}
+
+.map-container{
+  /* padding:10px; */
+  margin:auto;
+  width:min(max(320px,93vw),820px);
+  align-self:center;
+  overflow: hidden;
+
+  border: .5px solid #555555;
+  border-radius: 4px;
+
+}
+.leaflet-container {
+  width: 100%;
+  height: 300px;
 }
 
 .station-container{
