--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,14 @@
 body {
   background-color: black;
-  font-family:sans-serif;
-  text-emphasis-color: white;
   color:white;
   margin:0px;
   padding:0px;
+  text-align: left;
+}
+
+h1,h2,h3,h4,h5,p{
+  font-family:sans-serif;
+  margin:0px;
 }
 
 .header{
@@ -14,97 +18,29 @@ body {
   width:100%;
 }
 .footer{
-  /* width:min(max(300px,80vw),800px); */
-  /* align-self:center; */
   align-content:center;
+}
+
+.mobile-column{
+  width:100%;
+  overflow:visible;
+  margin:0 auto;
+  padding:0px;
+  border: .5px solid #555555;
 
 }
 
-h1,h2,h3,h4,h5,p{
-  margin:0px;
-}
-
-.general-info-container{
-  padding-right:10px;
-  padding-left:10px;
-  padding-top:10px;
+.mobile-container{
+  width:calc(100% - 21px);
+  padding:10px;
+  padding-bottom:0;
   margin:auto;
-  width:min(max(300px,90vw),800px);
-  align-self:center;
   overflow: hidden;
-  
-
-
 }
 
-.general-info{
-  width:min(max(300px,90vw),800px);
-  align-self:center;
-  overflow: hidden;
-  position:absolute;
-  
-  height: 100px;
-  /* width: 100px; */
-  position: absolute;
-  left: -min(max(300px,90vw),800px);
-  margin-left: -50px;
-  top: 130px;
-  margin-top: -50px;
-
-  /* transform: translateY(-80%); */
-
-  text-align:left;
-}
-
-.search-container{
-
-  width:min(max(300px,90vw),800px);
-
-
-
-}
-
-.location-container{
-  padding:0px 10px;
-  margin:auto;
-  width:min(max(300px,90vw),800px);
-  align-self:center;
-  /* overflow: hidden; */
-
-
-}
-.location-option{
-  background-color: #1a1a1a; 
-  /* border: .5px solid #555555; */
-  border-radius: 4px;
-  width:fit-content; 
-  
-  padding: 6px 10px;
-  
-  
-  color: white;
-  /* text-decoration: underline; */
-  font-weight: bold;
-  
-  cursor:pointer;
-  text-align: right;
-
-  margin-left: auto;
-  margin-top:4px;
-  margin-right: 8px;
-  margin-bottom:0px;
-
-
-}
-
-.map-toggle{
-  /* background-color: #222222;  */
-  border: none;
-  
+.toggle{
   padding: 0px 6px;
-  
   color: #aaaaaa;
-  /* text-decoration: underline; */
   font-weight: bold;
   
   cursor:pointer;
@@ -112,27 +48,28 @@ h1,h2,h3,h4,h5,p{
   float: right;
 
 }
+.toggle:hover{
+  color:#ccc;
+}
 
 .map-container{
-  /* padding:10px; */
-  margin:auto;
-  width:min(max(320px,93vw),820px);
-  align-self:center;
+  width: calc (100% - 1px);
   overflow: hidden;
 
-  border: .5px solid #555555;
-  border-radius: 4px;
+  
+  /* border-radius: 4px; */
 
 }
+
 .leaflet-container {
   width: 100%;
-  height: 300px;
+  height: 100%;
 }
 
 .station-container{
   padding:10px;
   margin:auto;
-  width:min(max(300px,90vw),800px);
+  width:calc(100% - 21px);
   align-self:center;
   overflow: hidden;
 
@@ -142,57 +79,29 @@ h1,h2,h3,h4,h5,p{
 }
 
 .walk-container{
-  /* padding:10px; */
   margin:auto;
-  width:max(300px,90vw);
   align-self:center;
   overflow: hidden;
-
   text-align:right;
   color: #555555;
-
-  /* border: .5px solid #555555;
-  border-radius: 4px; */
-
-}
-
-.additional-info-toggle{
-  /* background-color: #222222;  */
-  border: none;
-  
-  padding: 0px 6px;
-  
-  color: #aaaaaa;
-  /* text-decoration: underline; */
-  font-weight: bold;
-  
-  cursor:pointer;
-  text-align: center;
-  float: right;
-
 }
 
 .additional-station-info{
   float: left;
   clear:both;
   width:100%;
-
 }
 
 .load-more{
   background-color: #1a1a1a; 
-  /* border: .5px solid #555555; */
   border-radius: 4px;
   width:fit-content; 
   
   padding: 6px 10px;
-  margin:8px;
   margin-top:0px;
   margin-bottom:5px;
   
-  
   color: white;
-  /* text-decoration: underline; */
   font-weight: bold;
   
   cursor:pointer;
@@ -200,6 +109,65 @@ h1,h2,h3,h4,h5,p{
 
   margin-left: auto;
   margin-right: auto;
+}
+.load-more:hover{
+  background-color: #272727;
+}
 
 
+
+
+
+
+/* Desktop */
+
+
+.main-content{
+  /* width:90vw; */
+  width: max(calc(100% ),820px);
+  text-align:center;
+  margin:0px auto;
+  height: calc(100vh - 100px);
+  border-bottom: .5px solid #555555;
+  overflow: hidden;
+  
+}
+
+.left-content{
+  float:left;
+  width:40%;
+  height:100%;
+  
+  background-color: rgb(0, 0, 0);
+  overflow-y:scroll;
+}
+.left-content::-webkit-scrollbar {
+  width: 6px; 
+  background-color: #000;
+  /* background: transparent;   */
+}
+.left-content::-webkit-scrollbar-thumb {
+  background: #333; 
+  border-radius: 3px;
+  width:4px;
+}
+
+.left-top{
+  width:100%;
+  height:35px;
+  background-color: black;
+}
+.right-top{
+
+  margin-left:-10px;
+  height:35px;
+  background-color: black;
+
+}
+
+.right-content{
+  float:left;
+  width:60%;
+  height:100%;
+  background-color: black;
 }
